<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyFinHub</string>
    <string name="nav_home">Αρχική</string>
    <string name="nav_activity">Κινήσεις</string>
    <string name="nav_wallet">Πορτοφόλι</string>
    <string name="nav_money">Περιουσία</string>
    <string name="nav_plan">Πλάνο</string>
    <string name="nav_insights">Ανάλυση</string>
</resources>
